# Nooscope

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  nooscope.yaml.example  pyproject.toml
nooscope/: agenda_injector.py  barycenter.py  calendar_reader.py  capture.py  cli.py  config.py  db.py  indexer.py  mcp_server.py  meeting_notes.py  obsidian.py  watcher.py
nooscope/backends/: __init__.py  apple_nl.py  base.py  fdl.py  mlx.py  ollama.py  openai.py
nooscope/tools/: analysis.py  management.py  navigation.py  search.py  writing.py
tests/: test_agenda.py  test_backends.py  test_capture.py  test_chunking.py  test_indexer.py  test_mcp_tools.py  test_writing.py
tests/fixtures/vault/: moc.md  note1.md  note2.md
